ingress-annotation.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: #APPNAME#
  namespace: #NAMESPACE#
  annotations:
    kubernetes.io/ingress.class: #INGRESS#
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Strict-Transport-Security: max-age=31536000 ; includeSubDomains";
      more_set_headers "X-Frame-Options: deny";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-XSS-Protection: 1; mode=block";
      more_set_headers "Cache-Control: no-cache";
      more_set_headers "Cache-Control: no-store";
      more_clear_headers Server;
spec:
  tls:
    - secretName: surepay-app
  rules:
  - host: #HOSTNAME#
    http:
      paths:
      - path: /
        backend:
          serviceName: #APPNAME#
          servicePort: 8080
